# deep-reinforcement-learning

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
deep_reinforcement_learning/: __init__.py
deep_reinforcement_learning/algorithms/: __init__.py
deep_reinforcement_learning/algorithms/dqn/: __init__.py  agent.py  config.py
deep_reinforcement_learning/algorithms/ppo/: __init__.py
deep_reinforcement_learning/core/: __init__.py  environment.py  model.py  utils.py
deep_reinforcement_learning/examples/: __init__.py  cartpole_dqn.py  custom_env_dqn.py  lunarlander_dqn_per.py
deep_reinforcement_learning/tests/: __init__.py
deep_reinforcement_learning/tests/test_core/: __init__.py
deep_reinforcement_learning/tests/test_dqn/: __init__.py
dqn/: __init__.py  config.py  environment.py  memory.py  model.py  policy.py  trainer.py  utils.py
examples/: cartpole_example.py  custom_env_example.py
models/: dqn_cartpole.model  dqn_per_lunarlander.model
