# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-reinforcement-learning"
version = "0.1.0"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
    "gymnasium>=0.29.1"
]
requires-python = ">=3.8"
authors = [
    {name = "Mattia Beltrami", email = "mattia.beltrami@studio.unibo.it"}
]
description = "Modular package for deep reinforcement learning with high-level algorithms implementation"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]